add testing for routing and fixes
