# pkg/storaging/model.go
@@ -13,6 +13,10 @@ type LocaleItem struct {
 	Content string `json:"content"`
 }
 
+func (li LocaleItem) isValid() bool {
+	return li.Key != "" && li.Bundle != "" && li.Lang != ""
+}
+
 //LocaleItemHistory rappresents history traking for locale items
 type LocaleItemHistory struct {
 	ID               string
@@ -24,4 +28,9 @@ type LocaleItemHistory struct {
 //ErrorMessage rappresents error message
 type ErrorMessage struct {
 	Message string
+}
+
+type MassiveResult struct {
+	NumSuccessfull int64 `json:"num_successfull"`
+	NumFailed      int64 `json:"num_failed"`
 }
